# pgm_index

./: Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: release-on-tag.yml
benches/: pgm_vs_binary.rs
examples/: simple_benchmark.rs
src/: lib.rs  pgm_index.rs
