[package]
name = "pgm_index"
version = "0.1.0"
edition = "2024"
description = "Ultra-fast learned PGM-Index for efficient sorted key lookup with bounded error"
license = "MIT"
repository = "https://github.com/ARyaskov/pgm_index"
keywords = ["pgm-index", "learned-index", "index", "search", "data-structures"]
categories = ["data-structures", "algorithms", "science"]
authors = ["Andrei Riaskov <code@riaskov.com>"]
readme = "README.md"
documentation = "https://docs.rs/pgm_index"
homepage = "https://github.com/ARyaskov/pgm_index"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
num-traits = "0.2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[example]]
name = "simple_benchmark"
path = "examples/simple_benchmark.rs"

[[bench]]
name = "pgm_vs_binary"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2